# DigiScript

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yaml  sonar-project.properties  vetur.config.js
client/: .npmrc  (+17 more)
server/: .gitignore  .pylintrc  .python-version  README.md  alembic.ini  app_server.py  config.json  controllers.py  env_parser.py  logger.py  main.py  models.py  package-lock.json  package.json  pylint-ignore.md  pyproject.toml  requirements.txt  route.py  server.js  server.py  settings.py  test_hook.py  test_requirements.txt  utils.py
server/alembic_config/: README.md  env.py  repair_linked_list_utils.py
server/alembic_config/versions/: 01fb1d6c6b08_add_token_version_to_user.py  11311df29aa4_add_preferred_ui_to_user_settings.py  14f82e306537_.py  18660a2d5398_add_crew_table.py  29471f7cf7d2_user_deletion.py  390f0ab54425_add_table_page_sizes_to_user_settings.py  3f2343a8a936_add_created_on_timestamp_tp_users.py  3f5e49494531_add_cascade_delete_to_script_foreign_.py  42d0eaa5d07e_cleanup_orphaned_script_objects.py  43fcd5292e0f_add_is_cutting_to_sessions.py  4400e44b4455_add_script_revision_association_to_show_.py  4632b14b6e67_add_session_tags_and_associations.py  49df18ea818d_add_compiled_scripts_table.py  4e5d11ea7094_add_compressed_data_field_to_script_.py  4fbfeaba60ae_add_character_combined_dropdown_to_user_.py  5055c78fdf46_add_scenery_and_prop_allocations.py  625ac1e96e88_add_unique_constraints_to_allocation_.py  7cfa4709bb41_add_cue_position_right_setting.py  7df32f85a5a2_add_systemsettings_table_for_jwt_secret_.py  7fe8320b38c9_add_interval_state_to_show_session.py  859636b5ffbb_add_script_text_alignment_user_setting.py  863020cc72da_add_cue_groups.py  888565843a87_add_script_draft_table.py  897ae2963f6d_repair_linked_list_orphans_max_bridge.py  8c78b9c89ee6_add_user_last_seen_time.py  9161f286a179_add_scenery_and_props.py  9849eb6d381a_add_prop_and_scenery_types.py  9f76c42e225e_replace_stage_direction_with_line_type_.py  a39ac9e9f085_add_user_settings.py  a44e01459595_add_stage_direction_styles.py  a4d42ccfb71a_fix_session_table_foreign_key_reference.py  ab2947d2a6d7_add_cascade_delete_to_script_revision_.py  b3b3422cd1fe_remove_script_autosave_settings.py  b5a760d2ee49_backfill_and_set_script_text_alignment_.py  bb9b28a04946_rename_user_settings_table_to_user_.py  be353176c064_detach_users_from_shows.py  c1db8c1f4e37_add_console_log_level_to_user_settings.py  c2f8d4a6e0b3_repair_script_revision_linked_lists.py  c515969c1a51_add_character_mru_sort_to_user_settings.py  c952e582dcaf_add_cascade_delete_to_script_revision_.py  (+14 more)
server/config/: winston.js
server/controllers/: base_controller.py  controllers.py  vue3_controllers.py  ws_controller.py
server/controllers/api/: auth.py  constants.py  health.py  logging.py  logs_viewer.py  rbac.py  settings.py  shows.py  system_info.py  version.py  websocket.py
server/controllers/api/auth/: token.py  user.py
server/controllers/api/show/: acts.py  cast.py  characters.py  crew.py  cues.py  microphones.py  scenes.py  script.py  sessions.py  shows.py
server/controllers/api/user/: overrides.py  settings.py
server/controllers/api/v1/: db_backups.py  logging.py  settings.py  websocket.py
server/digi_server/: app_server.py  logger.py  plugin_manager.py  settings.py
server/models/: cue.py  mics.py  models.py  schemas.py  script.py  script_draft.py  session.py  settings.py  show.py  stage.py  user.py
server/rbac/: exceptions.py  rbac.py  rbac_db.py  role.py
server/registry/: named_locks.py  schema.py  user_overrides.py  user_settings.py
server/schemas/: schemas.py
server/scripts/: diagnose_linked_list.py
server/server/: app_server.py  settings.py
server/server_plugins/: osc_server.py
server/services/: password_service.py  user_service.py
server/src/: server.js
server/src/api/: api.js
server/static-vue3/: index.html
server/static-vue3/.vite/: manifest.json
server/static-vue3/assets/: AboutView-20v3qqqG.css  AboutView-DJD43Vlx.js  index-C5VGZqFi.css  index-r9_pACYz.js  vendor-f6MMzXtq.js
server/test/: conftest.py  test_auth_api.py  test_cascade_delete.py  test_composite_keys.py  test_digi_server.py  test_issue_670_reproduction.py  test_jwt.py  test_performance_baseline.py  test_query_equivalence.py  test_rbac.py  test_rbac_migration.py  test_script_config_controller.py  test_script_controller.py  test_script_models.py  test_script_revision_deletion.py  test_script_revisions_controller.py  test_settings.py  test_stage_direction_styles_controller.py  test_utils.py
server/test/api/: test_auth.py  test_rbac.py  test_settings.py  test_websocket.py
server/test/api/show/: test_acts.py  test_cast.py  test_characters.py  test_cues.py  test_microphones.py  test_scenes.py  test_sessions.py  test_shows.py
server/test/api/user/: test_overrides.py
server/test/controllers/: test_ws_controller.py
server/test/controllers/api/: test_auth.py  test_db_backups.py  test_logging.py  test_logs_viewer.py  test_rbac.py  test_settings.py  test_system_info.py  test_websocket.py
server/test/digi_server/: test_digi_server.py  test_log_buffer.py  test_logger.py
server/test/helpers/: stage_fixtures.py
server/test/models/: test_script.py
server/test/registry/: test_named_lock_registry.py
server/test/services/: test_password_service.py  test_user_service.py
server/test/utils/script/: test_line_to_ydoc.py  (+2 more)
server/tools/: analyze_queries.py
server/utils/: base_controller.py  compression.py  database.py  env_parser.py  exceptions.py  file_watcher.py  log_buffer.py  logger.py  mdns_service.py  module_discovery.py  pkg_utils.py  requires.py  route.py  script_room_manager.py  server_plugin.py  settings.py  singleton.py  tree.py  version_checker.py  web_decorators.py
server/utils/script/: diagnose_linked_list.py  line_helpers.py  line_to_ydoc.py  ydoc_to_lines.py  yjs_debug.py
server/utils/show/: block_computation.py  line_type_validator.py  mic_assignment.py
server/utils/web/: base_controller.py  jwt_service.py  jwt_utils.py  route.py  web_decorators.py
(+582 files in other folders)
